<resources>
    <string name="app_name">LaundryKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_input_name">Nama</string>
    <string name="label_input_number">No. Whatsapp (62)</string>
    <string name="label_input_address">Alamat</string>
    <string name="btn_save">Simpan</string>
    <string name="aplikasi_laundry">Aplikasi Laundry</string>
    <string name="description">Masukkan data pelanggan</string>
</resources>